--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
               </div>
 
               <h1 class="home__title">
-                INSPIRE <span class="home__title__highlight">THROUGN</span> DESIGN
+                INSPIRE
+                <span class="home__title__highlight">THROUGN</span> DESIGN
               </h1>
 
               <div class="home__description">
@@ -103,10 +104,104 @@
               <div class="clientCounter">
                 <div class="clientCounter__number">
                   <span>750+</span>
-
                 </div>
                 <div class="clientCounter__text">
                   <span>Happy Clients</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="about" class="about">
+        <div class="about__title container">
+          <span class="about__title__bg">About</span>
+          <h2>About</h2>
+          <p>
+            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
+            consectetur velit
+          </p>
+        </div>
+        <div class="container">
+          <div class="row align-items-center gy-5">
+            <div class="col-lg-6">
+              <div class="about__image__wrapper">
+                <img src="assests/img/about/about1.webp" alt="" />
+                <div class="about__mission">
+                  <div class="about__mission__icon">
+                    <i class="bi bi-lightbulb"></i>
+                  </div>
+                  <div class="about__mission__content">
+                    <h4>Our Purpose</h4>
+                    <p>
+                      Focus on delivering creative solutions that empower
+                      businesses to grow and succeed.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="about__content">
+                <div class="about__content__badge">COMPANY OVERVIEW</div>
+                <h2>
+                  Discover our journey and future aspirations towards innovation
+                  and success
+                </h2>
+                <div class="about__content__info">
+                  <p>
+                    Explore how we have developed our unique approach to tackle
+                    complex challenges and provide exceptional service across
+                    various industries. Our dedicated team works tirelessly to
+                    ensure client satisfaction.
+                  </p>
+                  <p>
+                    Through continuous learning and adaptation, we strive to
+                    stay at the forefront of technology and market trends,
+                    ensuring our solutions are always relevant and effective.
+                  </p>
+                </div>
+                <h4 class="about__content__valuesTitle">
+                  Fundamental Principles
+                </h4>
+                <div class="about__content__valuesList">
+                  <div class="about__content__valueItem">
+                    <div class="about__content__valueIcon">
+                      <i class="bi bi-check2"></i>
+                    </div>
+                    <span class="valueText">Trustworthiness</span>
+                  </div>
+                  <div class="about__content__valueItem">
+                    <div class="about__content__valueIcon">
+                      <i class="bi bi-check2"></i>
+                    </div>
+                    <span class="valueText">Quality</span>
+                  </div>
+                  <div class="about__content__valueItem">
+                    <div class="about__content__valueIcon">
+                      <i class="bi bi-check2"></i>
+                    </div>
+                    <span class="valueText">Creativity</span>
+                  </div>
+                  <div class="about__content__valueItem">
+                    <div class="about__content__valueIcon">
+                      <i class="bi bi-check2"></i>
+                    </div>
+                    <span class="valueText">Response</span>
+                  </div>
+                  <div class="about__content__valueItem">
+                    <div class="about__content__valueIcon">
+                      <i class="bi bi-check2"></i>
+                    </div>
+                    <span class="valueText">Collaboration</span>
+                  </div>
+                  <div class="about__content__valueItem">
+                    <div class="about__content__valueIcon">
+                      <i class="bi bi-check2"></i>
+                    </div>
+                    <span class="valueText">Growth Mindset</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
