completed stats, services and features section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </header>
 
     <main class="main">
+      <!-- Home Section -->
       <section class="home">
         <div class="container">
           <div class="row align-items-center">
@@ -113,6 +114,7 @@
           </div>
         </div>
       </section>
+      <!-- About Section -->
       <section id="about" class="about">
         <div class="about__title container">
           <span class="about__title__bg">About</span>
@@ -207,6 +209,362 @@
           </div>
         </div>
       </section>
+      <!-- Stats Section -->
+      <section id="stats" class="stats">
+        <div class="container">
+          <div class="row">
+            <div class="col-log-10">
+              <div class="stats__content">
+                <div class="stats__item">
+                  <div class="stats__item__icon">
+                    <i class="bi bi-emoji-smile"></i>
+                  </div>
+                  <span class="stats__counter">232</span>
+                  <p class="stats__text">Happy Clients</p>
+                </div>
+                <div class="stats__item">
+                  <div class="stats__item__icon">
+                    <i class="bi bi-journal-richtext"></i>
+                  </div>
+                  <span class="stats__counter">521</span>
+                  <p class="stats__text">Projects</p>
+                </div>
+                <div class="stats__item">
+                  <div class="stats__item__icon">
+                    <i class="bi bi-headset"></i>
+                  </div>
+                  <span class="stats__counter">1463</span>
+                  <p class="stats__text">Hours of Support</p>
+                </div>
+                <div class="stats__item">
+                  <div class="stats__item__icon">
+                    <i class="bi bi-people"></i>
+                  </div>
+                  <span class="stats__counter">15</span>
+                  <p class="stats__text">Hard Workers</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Services Section -->
+      <section id="services" class="services">
+        <div class="services__title container">
+          <span class="services__title__bg">Services</span>
+          <h2>Services</h2>
+          <p>
+            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
+            consectetur velit
+          </p>
+        </div>
+        <div class="container">
+          <div class="services__content">
+            <div class="row">
+              <div class="col-lg-9">
+                <div class="services__intro">
+                  <div class="services__tag">Strategic Consulting</div>
+                  <h2>
+                    Transform Your Business With Expert Consulting Solutions
+                  </h2>
+                  <p>
+                    We help organizations navigate complex challenges, identify
+                    growth opportunities, and implement effective strategies to
+                    achieve sustainable success in today's competitive
+                    landscape.
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nullam vehicula metus at libero finibus, in egestas nibh
+                    imperdiet. Proin condimentum fermentum ex, vitae malesuada
+                    risus scelerisque eu. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae;
+                    Donec gravida vestibulum ante, eget faucibus magna pulvinar
+                    vel. Cras consectetur ornare lectus, nec volutpat enim
+                    accumsan vel. Fusce facilisis sagittis purus, non malesuada
+                    augue dignissim ut. Integer scelerisque nibh quis diam
+                    pharetra, id ullamcorper ligula finibus.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="services__stats">
+                  <div class="services__stats__item">
+                    <span class="services__stats__number">500+</span>
+                    <span class="services__stats__text"
+                      >Projects Completed</span
+                    >
+                  </div>
+                  <div class="services__stats__item">
+                    <span class="services__stats__number">98%</span>
+                    <span class="services__stats__text"
+                      >Client Satisfaction</span
+                    >
+                  </div>
+                  <div class="services__stats__item">
+                    <span class="services__stats__number">15+</span>
+                    <span class="services__stats__text"
+                      >Years of Experience</span
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row g-4">
+            <div class="col-lg-3">
+              <div class="services__card">
+                <div class="services__card__content">
+                  <div class="services__card__icon">
+                    <i class="bi bi-lightbulb"></i>
+                  </div>
+                  <h3>Strategy Development</h3>
+                  <p>
+                    Develop comprehensive business strategies aligned with your
+                    vision, market dynamics, and organizational capabilities to
+                    drive sustainable growth.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="services__card">
+                <div class="services__card__content">
+                  <div class="services__card__icon">
+                    <i class="bi bi-bar-chart"></i>
+                  </div>
+                  <h3>Performance Optimization</h3>
+                  <p>
+                    Identify operational inefficiencies and implement targeted
+                    improvements to enhance productivity, reduce costs, and
+                    maximize business performance.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="services__card">
+                <div class="services__card__content">
+                  <div class="services__card__icon">
+                    <i class="bi bi-people"></i>
+                  </div>
+                  <h3>Organizational Devlopment</h3>
+                  <p>
+                    Build high-performing teams and effective organizational
+                    structures that foster innovation, collaboration, and
+                    adaptability in changing markets.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="services__card">
+                <div class="services__card__content">
+                  <div class="services__card__icon">
+                    <i class="bi bi-graph-up-arrow"></i>
+                  </div>
+                  <h3>Market Expansion</h3>
+                  <p>
+                    Identify and capitalize on new market opportunities through
+                    data-driven analysis, competitive intelligence, and
+                    strategic entry planning.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Features Section-->
+      <section id="features" class="features">
+        <div class="container features__title">
+          <span class="features__title__bg">Features</span>
+          <h2>Features</h2>
+          <p>
+            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
+            consectetur velit
+          </p>
+        </div>
+        <div class="container">
+          <div class="features__content">
+            <div class="features__content__main">
+              <h2>Integrated Business Framework</h2>
+              <p>
+                Leveraging cutting-edge technology provides the foundation for
+                comprehensive operational excellence across all your divisions.
+              </p>
+              <p>
+                Our robust architecture seamlessly integrates diverse systems,
+                streamlining workflows and boosting productivity to
+                unprecedented levels.
+              </p>
+              <p>
+                Gain actionable insights through sophisticated analytics and
+                reporting tools, empowering informed decision-making at every
+                turn.
+              </p>
+              <p>
+                Experience enhanced efficiency and scalability designed to grow
+                with your evolving business demands
+              </p>
+              <div class="features__achievement">
+                <div class="features__achievement__item">
+                  <span class="features__achievement__icon">
+                    <i class="bi bi-shield-check"></i>
+                  </span>
+                  <div class="features__achievement__info">
+                    <span class="features__achievement__value">95%</span>
+                    <span class="features__achievement__text"
+                      >Client Retention</span
+                    >
+                  </div>
+                </div>
+                <div class="features__achievement__item">
+                  <span class="features__achievement__icon">
+                    <i class="bi bi-clock-history"></i>
+                  </span>
+                  <div class="features__achievement__info">
+                    <span class="features__achievement__value"
+                      >Around-the-Clock</span
+                    >
+                    <span class="features__achievement__text"
+                      >Dedicated Support</span
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="features__card">
+              <div class="features__card__row">
+                <div class="features__card__item">
+                  <div class="features__card__icon">
+                    <i class="bi bi-shield-lock"></i>
+                  </div>
+                  <div class="features__card__content">
+                    <h3>Fortified Digital Security</h3>
+                    <p>
+                      Secure your critical assets with our advanced,
+                      multi-layered security protocols.
+                    </p>
+                    <div class="features__card__status">
+                      <span class="features__card__status__indicator"></span>
+                      <span class="features__card__status__text">Deployed</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="features__card__item">
+                  <div class="features__card__icon">
+                    <i class="bi bi-cloud-arrow-up"></i>
+                  </div>
+                  <div class="features__card__content">
+                    <h3>Seamless Cloud Migration</h3>
+                    <p>
+                      Migrate your operations effortlessly to the cloud for
+                      enhanced flexibility and access.
+                    </p>
+                    <div class="features__card__status">
+                      <span class="features__card__status__indicator"></span>
+                      <span class="features__card__status__text"
+                        >in Devlopment</span
+                      >
+                    </div>
+                  </div>
+                </div>
+                <div class="features__card__item">
+                  <div class="features__card__icon">
+                    <i class="bi bi-database-check"></i>
+                  </div>
+                  <div class="features__card__content">
+                    <h3>Superior Data Governance</h3>
+                    <p>
+                      Manage and protect your data with robust compliance and
+                      integrity measures.
+                    </p>
+                    <div class="features__card__status">
+                      <span class="features__card__status__indicator"></span>
+                      <span class="features__card__status__text"
+                        >operational</span
+                      >
+                    </div>
+                  </div>
+                </div>
+                <div class="features__card__item">
+                  <div class="features__card__icon">
+                    <i class="bi bi-cpu"></i>
+                  </div>
+                  <div class="features__card__content">
+                    <h3>Intelligent Automation</h3>
+                    <p>
+                      Automate complex processes and drive innovation with
+                      AI-powered insights.
+                    </p>
+                    <div class="features__card__status">
+                      <span class="features__card__status__indicator"></span>
+                      <span class="features__card__status__text"
+                        >Scheduled</span
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="features__additional">
+            <div class="row gx-4 gy-4">
+              <div class="col-lg-4">
+                <div class="features__additional__card">
+                  <div class="features__additional__card__icon">
+                    <i class="bi bi-gear-wide-connected"></i>
+                  </div>
+                  <h4>Workflow Optimization</h4>
+                  <p>
+                    Streamline your daily operations through intelligent,
+                    automated workflow solutions.
+                  </p>
+                  <div class="features__additional__card__active">
+                    <i class="bi bi-check-circle"></i>
+                    Active
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="features__additional__card">
+                  <div class="features__additional__card__icon">
+                    <i class="bi bi-bar-chart-line"></i>
+                  </div>
+                  <h4>Performance Monitoring</h4>
+                  <p>
+                    Monitor key metrics and identify growth opportunities with
+                    detailed performance analytics.
+                  </p>
+                  <div class="features__additional__card__active">
+                    <i class="bi bi-arrow-repeat"></i>
+                    Pending
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="features__additional__card">
+                  <div class="features__additional__card__icon">
+                    <i class="bi bi-graph-up-arrow"></i>
+                  </div>
+                  <h4>Strategic Growth</h4>
+                  <p>
+                    Develop strategies and implement tactics for achieving
+                    sustainable revenue expansion.
+                  </p>
+                  <div class="features__additional__card__active">
+                    <i class="bi bi-calendar-check"></i>
+                    Planned
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Features Alt Section -->
+       
     </main>
     <header></header>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
