completed pricing section

--- a/index.html
+++ b/index.html
@@ -657,25 +657,40 @@
                         <ul class="altFeatures__content__box__list">
                           <li>
                             <i class="bi bi-check2-circle"></i>
-                            <span>Curabitur aliquet quam id dui posuere blandit</span>
+                            <span
+                              >Curabitur aliquet quam id dui posuere
+                              blandit</span
+                            >
                           </li>
                           <li>
                             <i class="bi bi-check2-circle"></i>
-                            <span>Curabitur aliquet quam id dui posuere blandit</span>
+                            <span
+                              >Curabitur aliquet quam id dui posuere
+                              blandit</span
+                            >
                           </li>
                           <li>
                             <i class="bi bi-check2-circle"></i>
-                            <span>Curabitur aliquet quam id dui posuere blandit</span>
+                            <span
+                              >Curabitur aliquet quam id dui posuere
+                              blandit</span
+                            >
                           </li>
                           <li>
                             <i class="bi bi-check2-circle"></i>
-                            <span>Curabitur aliquet quam id dui posuere blandit</span>
+                            <span
+                              >Curabitur aliquet quam id dui posuere
+                              blandit</span
+                            >
                           </li>
                         </ul>
                       </div>
                       <div class="col-lg-6">
                         <div class="altFeatures__img">
-                          <img src="assests/img/features/feature1.webp" alt="">
+                          <img
+                            src="assests/img/features/feature1.webp"
+                            alt=""
+                          />
                         </div>
                       </div>
                     </div>
@@ -687,9 +702,374 @@
         </div>
       </section>
       <!-- Solution Section -->
-       <section id="solution" class="solution">
-        
-       </section>
+      <section id="solution" class="solution">
+        <div class="container">
+          <div class="solution__content">
+            <div class="row g-0">
+              <div class="col-lg-7">
+                <div class="solution__content__left">
+                  <span class="solution__content__badge">Premium Offer</span>
+                  <h2>Transform Your Experience With Our Solution</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam.
+                  </p>
+                  <div class="solution__content__benefits row">
+                    <div class="col-md-6">
+                      <div class="solution__content__benefits__item">
+                        <div class="solution__content__benefits__item__icon">
+                          <i class="bi bi-lightning-charge-fill"></i>
+                        </div>
+                        <div class="solution__content__benefits__item__text">
+                          <h5>Quick Setup</h5>
+                          <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="solution__content__benefits__item">
+                        <div class="solution__content__benefits__item__icon">
+                          <i class="bi bi-shield-check"></i>
+                        </div>
+                        <div class="solution__content__benefits__item__text">
+                          <h5>Full Security</h5>
+                          <p>
+                            Sed ut perspiciatis unde omnis iste natus error sit
+                            voluptatem.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="solution__content__left__buttons">
+                    <a href="" class="btn btn-primary">Start Now</a>
+                    <a href="" class="btn btn-outline">Learn More</a>
+                    <div class="solution__content__left__guarantee">
+                      <i class="bi bi-patch-check-fill"></i>
+                      <span>30-Day Money Back</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-5">
+                <div class="solution__content__right">
+                  <img src="assests/img/features/feature2.webp" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Portfolio Section -->
+      <section id="portfolio" class="portfolio">
+        <div class="portfolio__title container">
+          <span class="portfolio__title__bg">Portfolio</span>
+          <h2>Portfolio</h2>
+          <p>
+            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
+            consectetur velit
+          </p>
+        </div>
+        <div class="container">
+          <div class="portfolio__content">
+            <div class="row">
+              <div class="col-lg-3">
+                <div class="portfolio__content__sidebar">
+                  <ul class="portfolio__content__sidebar__nav">
+                    <li data-filter="*" class="filter-active">All Projects</li>
+                    <li data-filter=".filter-photography">Photography</li>
+                    <li data-filter=".filter-design">Design</li>
+                    <li data-filter=".filter-automotive">Automotive</li>
+                    <li data-filter=".filter-nature">Nature</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-lg-9">
+                <div class="row gy-4 portfolio__content__main">
+                  <div class="col-lg-6 col-md-6">
+                    <div class="portfolio__content__main__wrap">
+                      <img
+                        src="assests/img/portfolio/portfolio-portrait-1.webp"
+                        alt=""
+                        class="img-fluid"
+                      />
+                      <div class="portfolio__content__info">
+                        <div class="portfolio__content__info__wrap">
+                          <span class="portfolio__content__category">
+                            Phototgraphy
+                          </span>
+                          <h4>Capturing Moments</h4>
+                          <div class="portfolio__content__link">
+                            <a
+                              href="assests/img/portfolio/portfolio-portrait-1.webp"
+                            >
+                              <i class="bi bi-plus-lg"></i>
+                            </a>
+                            <a href="">
+                              <i class="bi bi-arrow-right"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-6">
+                    <div class="portfolio__content__main__wrap">
+                      <img
+                        src="assests/img/portfolio/portfolio-portrait-1.webp"
+                        alt=""
+                        class="img-fluid"
+                      />
+                      <div class="portfolio__content__info">
+                        <div class="portfolio__content__info__wrap">
+                          <span class="portfolio__content__category">
+                            Phototgraphy
+                          </span>
+                          <h4>Capturing Moments</h4>
+                          <div class="portfolio__content__link">
+                            <a
+                              href="assests/img/portfolio/portfolio-portrait-1.webp"
+                            >
+                              <i class="bi bi-plus-lg"></i>
+                            </a>
+                            <a href="">
+                              <i class="bi bi-arrow-right"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-6">
+                    <div class="portfolio__content__main__wrap">
+                      <img
+                        src="assests/img/portfolio/portfolio-portrait-1.webp"
+                        alt=""
+                        class="img-fluid"
+                      />
+                      <div class="portfolio__content__info">
+                        <div class="portfolio__content__info__wrap">
+                          <span class="portfolio__content__category">
+                            Phototgraphy
+                          </span>
+                          <h4>Capturing Moments</h4>
+                          <div class="portfolio__content__link">
+                            <a
+                              href="assests/img/portfolio/portfolio-portrait-1.webp"
+                            >
+                              <i class="bi bi-plus-lg"></i>
+                            </a>
+                            <a href="">
+                              <i class="bi bi-arrow-right"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-6">
+                    <div class="portfolio__content__main__wrap">
+                      <img
+                        src="assests/img/portfolio/portfolio-portrait-1.webp"
+                        alt=""
+                        class="img-fluid"
+                      />
+                      <div class="portfolio__content__info">
+                        <div class="portfolio__content__info__wrap">
+                          <span class="portfolio__content__category">
+                            Phototgraphy
+                          </span>
+                          <h4>Capturing Moments</h4>
+                          <div class="portfolio__content__link">
+                            <a
+                              href="assests/img/portfolio/portfolio-portrait-1.webp"
+                            >
+                              <i class="bi bi-plus-lg"></i>
+                            </a>
+                            <a href="">
+                              <i class="bi bi-arrow-right"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-6">
+                    <div class="portfolio__content__main__wrap">
+                      <img
+                        src="assests/img/portfolio/portfolio-portrait-1.webp"
+                        alt=""
+                        class="img-fluid"
+                      />
+                      <div class="portfolio__content__info">
+                        <div class="portfolio__content__info__wrap">
+                          <span class="portfolio__content__category">
+                            Phototgraphy
+                          </span>
+                          <h4>Capturing Moments</h4>
+                          <div class="portfolio__content__link">
+                            <a
+                              href="assests/img/portfolio/portfolio-portrait-1.webp"
+                            >
+                              <i class="bi bi-plus-lg"></i>
+                            </a>
+                            <a href="">
+                              <i class="bi bi-arrow-right"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-6">
+                    <div class="portfolio__content__main__wrap">
+                      <img
+                        src="assests/img/portfolio/portfolio-portrait-1.webp"
+                        alt=""
+                        class="img-fluid"
+                      />
+                      <div class="portfolio__content__info">
+                        <div class="portfolio__content__info__wrap">
+                          <span class="portfolio__content__category">
+                            Phototgraphy
+                          </span>
+                          <h4>Capturing Moments</h4>
+                          <div class="portfolio__content__link">
+                            <a
+                              href="assests/img/portfolio/portfolio-portrait-1.webp"
+                            >
+                              <i class="bi bi-plus-lg"></i>
+                            </a>
+                            <a href="">
+                              <i class="bi bi-arrow-right"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Pricing Section -->
+      <section id="pricing" class="pricing">
+        <div class="pricing__title container">
+          <span class="pricing__title__bg">Pricing</span>
+          <h2>Pricing</h2>
+          <p>
+            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
+            consectetur velit
+          </p>
+        </div>
+        <div class="container">
+          <div class="row gy-4 justify-content-center">
+            <div class="col-lg-4 col-md-6">
+              <div class="pricing__item">
+                <div class="pricing__item__icon">
+                  <i class="bi bi-star"></i>
+                </div>
+                <h3>Standard</h3>
+                <div class="pricing__item__price">
+                  <span class="pricing__item__currency">$</span>
+                  9
+                  <span class="pricing__item__period">/month</span>
+                </div>
+                <p class="pricing__item__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  do eiusmod tempor.
+                </p>
+                <ul class="pricing__item__features">
+                  <li>
+                    <i class="bi bi-check2"></i>
+                    Vestibulum ante ipsum primis
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>
+                    Fusce vulputate eleifend
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>
+                    Nullam ac tortor vitae
+                  </li>
+                </ul>
+                <a href="" class="pricing__item__btn">Buy Now</a>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="pricing__item featured">
+                <div class="pricing__item__badge">Recommended</div>
+                <div class="pricing__item__icon">
+                  <i class="bi bi-stars"></i>
+                </div>
+                <h3>Professional</h3>
+                <div class="pricing__item__price">
+                  <span class="pricing__item__currency">$</span>
+                  29
+                  <span class="pricing__item__period">/month</span>
+                </div>
+                <p class="pricing__item__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  do eiusmod tempor.
+                </p>
+                <ul class="pricing__item__features">
+                  <li>
+                    <i class="bi bi-check2"></i>
+                    Vestibulum ante ipsum primis
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>
+                    Fusce vulputate eleifend
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>
+                    Nullam ac tortor vitae
+                  </li>
+                </ul>
+                <a href="" class="pricing__item__btn">Buy Now</a>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="pricing__item">
+                <div class="pricing__item__icon">
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <h3>Ultimate</h3>
+                <div class="pricing__item__price">
+                  <span class="pricing__item__currency">$</span>
+                  49
+                  <span class="pricing__item__period">/month</span>
+                </div>
+                <p class="pricing__item__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  do eiusmod tempor.
+                </p>
+                <ul class="pricing__item__features">
+                  <li>
+                    <i class="bi bi-check2"></i>
+                    Vestibulum ante ipsum primis
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>
+                    Fusce vulputate eleifend
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>
+                    Nullam ac tortor vitae
+                  </li>
+                </ul>
+                <a href="" class="pricing__item__btn">Buy Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <header></header>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
